<resources>
    <string name="app_name">Bringg Example Driver App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="validate">Validate</string>
    <string name="login">Login</string>
    <string name="login_with">Login with</string>
    <string name="mail_empty_message">Mail cannot be empty</string>
    <string name="password_empty_message">Please insert password</string>
    <string name="phone_number_not_valid">Phone number not valid</string>
    <string name="sms_empty_message">Sms code cannot be empty</string>
    <string name="loading_wait">Loading. Please wait…</string>
    <string name="cancel">Cancel</string>
    <string name="choose_company">Choose company</string>
    <string name="sms_code">sms code</string>
    <string name="start_shift">Start shift</string>
    <string name="history">History</string>
    <string name="change_account">Change account</string>
    <string name="Setting">Setting</string>
    <string name="drawer_open">"Drawer Open"</string>
    <string name="drawer_close">"Drawer Close"</string>
    <string name="end_shift">End shift</string>
    <string name="in_shift">In shift</string>
    <string name="not_in_shift">Not in shift</string>
    <string name="loading">Loading</string>
    <string name="scheduled_for">Scheduled for</string>
    <string name="start_order">Start order</string>
    <string name="not_in_shift_title">You are not in shift</string>
    <string name="not_in_shift_message">Do you want to start a shift?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="arrived">Arrived</string>
    <string name="leave">Leave</string>
    <string name="completed">Completed</string>
    <string name="no_task">No tasks available</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="qr_code">QR Code</string>
    <string name="notification_in_shift_title">Shift ON</string>
    <string name="notification_in_shift_message">You are in shift</string>
    <string name="task_not_accept_title">Task not accepted</string>
    <string name="task_not_accept_message">Please accept task for start task</string>
    <string name="no_now">Not now</string>
    <string name="incomplete_mandatory_actions">You hava to complete these actions:</string>
    <string name="ok">OK</string>
    <string name="cancel_task">Cancel Task</string>

</resources>
