<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_start_shift"
            android:icon="@drawable/ic_pause_white_24dp"
            android:title="@string/end_shift" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_white_24dp"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_change_account"
            android:icon="@drawable/ic_account_circle_white_24dp"
            android:title="@string/change_account" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/Setting" />
    </group>
</menu>