<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:text="@string/login_with"/>

            <RadioGroup
                android:id="@+id/rg_login_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/email"></RadioButton>

                <RadioButton
                    android:id="@+id/rb_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number">
                </RadioButton>
            </RadioGroup>

        </LinearLayout>

        <com.bringg.exampleapp.login.LoginWithPhoneView android:visibility="gone"
            android:id="@+id/v_login_with_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="48dp"></com.bringg.exampleapp.login.LoginWithPhoneView>

        <com.bringg.exampleapp.login.LoginWithEmailView
            android:id="@+id/v_login_with_mail"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="48dp"></com.bringg.exampleapp.login.LoginWithEmailView>


    </FrameLayout>
</FrameLayout>